# pii-guard

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: pii-guard-read.sh
.codex/: hooks.json
.codex/hooks/: pii-guard-read.sh
src/pii_guard/: __init__.py  __main__.py  cli.py  file_handlers.py  hook_anonymize.py  hook_detect.py  hook_engine.py  server.py
src/pii_guard/pipeline/: __init__.py  engine.py
src/pii_guard/recognizers/: __init__.py  english_ner_recognizer.py  ollama_recognizer.py  tw_business_recognizer.py  tw_extra_recognizers.py  tw_id_recognizer.py  tw_misc_recognizers.py  tw_phone_recognizer.py  tw_recognizers.py
tests/: conftest.py  test_ckip_ner.py  test_file_handlers.py  test_hook.py  test_mcp_server.py  test_ollama_recognizer.py  test_pipeline.py  test_tw_recognizers.py
tests/eval/: conftest.py  eval_corpus.json  eval_utils.py  test_eval.py
tests/fixtures/: sample.txt
