[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pii-guard"
version = "0.1.0"
description = "繁體中文（台灣）個人資料去識別化工具 / Traditional Chinese PII de-identification tool"
requires-python = ">=3.11"
dependencies = [
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "spacy>=3.7.0",
    "spacy-transformers>=1.3.0",
    "spacy-huggingface-pipelines>=0.0.4",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
pii-guard = "pii_guard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pii_guard"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require model download (e.g. CKIP BERT ~500MB)",
    "eval: marks evaluation tests (precision/recall/F1 against annotated corpus)",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
